force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/sked__Templated_Job_Time_Constraint__c.object-meta.xml
<CustomObject>
    <label>Templated Job Time Constraint</label>
    <nameField>
        <displayFormat>JTC-{0000}</displayFormat>
        <label>Templated Job Time Constraint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Time Constraints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>