force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/fields/sked__End_Before_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>sked__End_Before_Offset_Days__c</fullName>
    <label>End Before Offset Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>