force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/fields/sked__End_Before_Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>sked__End_Before_Time_Of_Day__c</fullName>
    <label>End Before Time Of Day</label>
    <type>Time</type>
</CustomField>