force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/fields/sked__Start_After_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_After_Offset_Days__c</fullName>
    <label>Start After Offset Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>