force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/fields/sked__Start_After_Time_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_After_Time_Of_Day__c</fullName>
    <label>Start After Time Of Day</label>
    <type>Time</type>
</CustomField>