force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/fields/sked__Templated_Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Templated_Job__c</fullName>
    <label>Templated Job</label>
    <referenceTo>sked__Templated_Job__c</referenceTo>
    <relationshipLabel>Templated Job Time Constraints</relationshipLabel>
    <relationshipName>Templated_Job_Time_Constraints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>