force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/fields/sked__Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLA</fullName>
                <default>true</default>
                <label>SLA</label>
            </value>
            <value>
                <fullName>Timeslot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>