force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/validationRules/sked__EndBeforeOffsetDaysNonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__EndBeforeOffsetDaysNonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__End_Before_Offset_Days__c ) ) , sked__End_Before_Offset_Days__c &lt; 0 )</errorConditionFormula>
    <errorDisplayField>sked__End_Before_Offset_Days__c</errorDisplayField>
    <errorMessage>End Before Offset Days must be null or non-negative</errorMessage>
</ValidationRule>