force-app/main/default/objects/sked__Templated_Job_Time_Constraint__c/validationRules/sked__StartBeforeOffsetDaysNonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartBeforeOffsetDaysNonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Start_Before_Offset_Days__c ) ) , sked__Start_Before_Offset_Days__c &lt; 0 )</errorConditionFormula>
    <errorDisplayField>sked__Start_Before_Offset_Days__c</errorDisplayField>
    <errorMessage>Start Before Offset Days must be null or non-negative</errorMessage>
</ValidationRule>